src/golden/functions/errors/test.golden/listnohead.fl
	takehead (List[A] l) = l.head
